--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea
 /venv
+preview.png
 
 ### Python template
 # Byte-compiled / optimized / DLL files
@@ -141,3 +142,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+/preview.png
